updating rpi scripts