@@ -5,7 +5,7 @@ setupJava(){
     export PATH=$PATH:$JAVA_HOME/bin/
     export M2_HOME=/usr/share/maven/
     export M2=$M2_HOME
-    export MAVEN_OPTS='-Xmx512m -XX:MaxPermSize=512m -Xms256m'
+    export MAVEN_OPTS='-Xmx640m -Xms256m'
     export PATH=$M2:$PATH
 }
 
@@ -19,4 +19,4 @@ fi
 
 setupJava
 
-mvn clean install -Pq -DskipTests -Dcheckstyle.skip=true -Dmaven.javadoc.skip=true
+mvn clean install -s /home/pi/.m2/settings.xml -Pq -DskipTests -Dcheckstyle.skip=true -Dmaven.javadoc.skip=true
